--- a/style.css
+++ b/style.css
@@ -7,18 +7,19 @@
 body {
     background-color: #ADD9E5;
     font-family: 'Nerko One', cursive;
+    text-align: center;
 }
 
 header {
     font-size: 80px;
-    text-align: center;
     padding-top: 10px;
     color: white;
+    text-transform: uppercase;
 }
 
 main {
     width: 60%;
-    margin: 20px auto;
+    margin: 5px auto;
 }
 
 
@@ -32,40 +33,43 @@ main {
     margin: 1%;
     border-radius: 10px;
     overflow: hidden;
-    text-align: center;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+.carta.attiva,
+.carta:hover {
+    background-image: none;
+    background-color: white;
 }
 
 .carta img {
     width: 80%;
     visibility: hidden;
 }
+.carta.attiva img,
+.carta:hover img {
+    visibility: visible;
+}
 
 .carta p {
     display: none;
 }
-
-.carta:hover {
-    background-image: none;
-    background-color: white;
-}
-
-.carta:hover img {
-    visibility: visible;
-}
+.carta.attiva p,
 .carta:hover p {
+    width: 100%;
     position: absolute;
     text-align: center;
     bottom: 5px;
-    left: 5px;
-    color: #E61A86;
     font-size: 25px;
     display: block;
 }
-
-
+.carta.attiva p {
+    color: #E61A86;
+}
+.carta:hover p {
+    color: #E67919;
+}
 
 footer {
-    text-align: center;
     font-size: 20px;
     margin: 20px;
 }
